--- a/CarRental/src/main/resources/templates/admin-staff.html
+++ b/CarRental/src/main/resources/templates/admin-staff.html
@@ -37,7 +37,7 @@
             <div class="page-header-filters">
                 <div class="search-box">
                     <label for="searchInput">Tìm kiếm nhân viên</label>
-                    <input type="text" id="searchInput" placeholder="Tìm kiếm theo tên, email...">
+                    <input type="text" id="searchInput" placeholder="Tìm kiếm theo tên...">
                 </div>
                 <div class="filter-group">
                     <label for="stationFilter">Điểm thuê</label>
@@ -52,7 +52,6 @@
                     <thead>
                     <tr>
                         <th>Họ tên</th>
-                        <th>Email</th>
                         <th>Điểm làm việc</th>
                         <th>Vai trò</th>
                         <th>Hiệu suất (chuyến)</th>
@@ -151,8 +150,6 @@
 </div>
 
 <script th:src="@{/js/admin-staff.js}"></script>
-<script>
-</script>
 
 </body>
 </html>
