--- a/CarRental/src/main/resources/templates/admin-history.html
+++ b/CarRental/src/main/resources/templates/admin-history.html
@@ -14,9 +14,7 @@
 
     <div class="main-content">
         <header class="content-header">
-            <div class="search-bar">
-                <input type="text" placeholder="Search...">
-            </div>
+            <div style="flex-grow: 1;"></div>
 
             <div class="admin-profile" onclick="toggleProfileMenu(event)">
                 <img th:src="@{/images/admin-avatar.png}" alt="Admin">
@@ -60,9 +58,6 @@
 </div>
 
 <script th:src="@{/js/admin-history.js}"></script>
-
-<script>
-</script>
 
 </body>
 </html>
