--- a/CarRental/src/main/resources/templates/fragments/admin-nav.html
+++ b/CarRental/src/main/resources/templates/fragments/admin-nav.html
@@ -8,10 +8,8 @@
         <h2>EV Station</h2>
     </div>
     <ul class="sidebar-nav">
-        <li><a href="#" th:class="${activePage == 'dashboard'} ? 'active'">Bảng điều khiển</a></li>
-
         <li><a th:href="@{/admin/vehicles}"
-               th:class="${activePage == 'vehicles'} ? 'active'">Quản lý độ xe</a></li>
+               th:class="${activePage == 'vehicles'} ? 'active'">Quản lý xe</a></li>
 
         <li><a th:href="@{/admin/stations}"
                th:class="${activePage == 'stations'} ? 'active'">Quản lý điểm thuê</a></li>
