--- a/CarRental/src/main/resources/templates/staff-return-vehicle.html
+++ b/CarRental/src/main/resources/templates/staff-return-vehicle.html
@@ -14,7 +14,7 @@
             <li><a href="#">Bảng điều khiển</a></li>
             <li><a th:href="@{/staff/receive}" class="active">Nhận xe</a></li>
             <li><a th:href="@{/staff/deliver}">Giao xe</a></li>
-            <li><a href="#">Hồ sơ</a></li>
+            <li><a th:href="@{/staff/vehicle-reports}">Báo cáo sự cố</a></li>
             <li><a th:href="@{/logout}">Đăng xuất</a></li>
         </ul>
     </nav>
@@ -22,12 +22,11 @@
     <div class="main-content-staff">
         <header class="content-header-staff">
             <div class="header-title">Nhận xe (Trả xe)</div>
-            <div classs="header-vehicle-info" id="vehicle-plate">51A-123.45</div>
+            <div class="header-vehicle-info" id="vehicle-plate">51A-123.45</div>
         </header>
 
         <main class="content-body-staff">
             <form id="return-form">
-
                 <section class="process-section">
                     <h2>1. Tình trạng xe (Lúc trả)</h2>
                     <div class="customer-info">
@@ -106,7 +105,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.0.0/dist/signature_pad.umd.min.js"></script>
-
 <script th:src="@{/js/staff-return-vehicle.js}"></script>
 
 </body>
