--- a/CarRental/src/main/resources/templates/staff-verification.html
+++ b/CarRental/src/main/resources/templates/staff-verification.html
@@ -15,7 +15,7 @@
             <li><a th:href="@{/staff/receive}">Nhận xe</a></li>
             <li><a th:href="@{/staff/deliver}">Giao xe</a></li>
             <li><a th:href="@{/staff/verify}" class="active">Xác thực</a></li>
-            <li><a href="#">Hồ sơ</a></li>
+            <li><a th:href="@{/staff/vehicle-reports}">Báo cáo sự cố</a></li>
             <li><a th:href="@{/logout}">Đăng xuất</a></li>
         </ul>
     </nav>
