--- a/CarRental/src/main/resources/templates/user-datxe.html
+++ b/CarRental/src/main/resources/templates/user-datxe.html
@@ -112,6 +112,10 @@
                 <button type="button" class="btn-upload-doc" id="btn-upload-idcard">Tải CCCD/CMND</button>
                 <button type="button" class="btn-upload-doc" id="btn-upload-license">Tải GPLX</button>
             </div>
+            <div class="verify-row">
+                <p id="verify-status" class="verify-status">Chưa xác thực</p>
+                <button type="button" class="btn-upload-doc secondary" id="btn-request-verify">Yêu cầu xác thực tại quầy</button>
+            </div>
         </div>
 
         <div class="book-now-action">
