--- a/CarRental/src/main/resources/templates/lichsuthue.html
+++ b/CarRental/src/main/resources/templates/lichsuthue.html
@@ -90,6 +90,16 @@
                     <p class="analytic-label">Thời gian trung bình</p>
                     <p class="analytic-value" id="avg-duration">0 <small>ngày</small></p>
                 </div>
+                <div class="analytic-item">
+                    <i class="fas fa-road"></i>
+                    <p class="analytic-label">Tổng quãng đường</p>
+                    <p class="analytic-value" id="total-distance">0 <small>km</small></p>
+                </div>
+                <div class="analytic-item full-row">
+                    <i class="fas fa-chart-line"></i>
+                    <p class="analytic-label">Khung giờ thường thuê</p>
+                    <p class="analytic-value" id="peak-hours">-</p>
+                </div>
             </div>
         </div>
 
