--- a/CarRental/src/main/resources/templates/staff-return-vehicle.html
+++ b/CarRental/src/main/resources/templates/staff-return-vehicle.html
@@ -12,8 +12,10 @@
         <div class="logo">⚡️ EV Station</div>
         <ul>
             <li><a href="#">Bảng điều khiển</a></li>
+            <li><a th:href="@{/staff/station-grid}">Quản lý xe</a></li>
             <li><a th:href="@{/staff/receive}" class="active">Nhận xe</a></li>
             <li><a th:href="@{/staff/deliver}">Giao xe</a></li>
+            <li><a th:href="@{/staff/verify}">Xác thực</a></li>
             <li><a th:href="@{/staff/vehicle-reports}">Báo cáo sự cố</a></li>
             <li><a th:href="@{/logout}">Đăng xuất</a></li>
         </ul>
