--- a/CarRental/src/main/resources/templates/lichsuthue.html
+++ b/CarRental/src/main/resources/templates/lichsuthue.html
@@ -59,7 +59,7 @@
                         <label for="status-filter">Trạng thái:</label>
                         <select id="status-filter" class="form-select">
                             <option value="all">Tất cả</option>
-                            <option value="rented">Đã thuê</option>
+                            <option value="rented">Đang chờ thanh toán</option>
                             <option value="active">Đang thuê</option>
                             <option value="returned">Đã trả xe</option>
                         </select>
